Add background blur

--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -1,12 +1,12 @@
 # Wallpaper
 exec-once = swww init
 # Status
-exec-once = eww open-many bar bar-left bar-right
+exec-once = eww open-many bar-blur bar bar-left bar-right
 exec-once = avizo-service
 
 # Core components (authentication, lock screen, notification daemon)
 exec-once = dbus-update-activation-environment --all &
-# Fix OBS? Maybe?
+# Fix OBS? Maybe? idk
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets &
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
