--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -210,7 +210,7 @@ windowrule=float,title:^(Library)(.*)$
 #layerrule = blur, swww
 ######## Layer rules ########
 layerrule = blur, gtk-layer-shell
-layerrule = ignorezero, gtk-layer-shell
+layerrule = ignorealpha 0, gtk-layer-shell
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 #layerrule = ignorealpha 0.4, gtk-layer-shell
